--- a/style.css
+++ b/style.css
@@ -18,7 +18,50 @@ p {
     font-weight: bold;
 }
 
-#content {
-    width: 40%;
+#calculator-body {
+    width: 35%;
     margin: 50px auto;
+    height: 450px;
+    border: 1px solid white;
+}
+
+.calculator-display {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 25%;
+    margin: 0 auto;
+    border: 1px solid green
+}
+
+.calculator-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    width: 99.5%;
+    height: 74%;
+    border: 1px solid red
+}
+
+button {
+    width: 25%;
+    height: 20%;
+}
+
+.double {
+    width: 50%;
+}
+
+.control {
+    background-color: #d6d6d6;
+    color: black
+}
+
+.number {
+    background-color: #424242;
+    color: #dcdcdc
+}
+
+.operator {
+    background-color: #ff9400;
+    color: #dcdcdc;
 }
