--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'PT Mono', monospace;
-    background-color: #010b13;
+    background-color: gainsboro;
 }
 
 #header {
@@ -8,11 +8,8 @@ body {
     justify-content: center;
 }
 
-p {
-    color: white
-}
-
 .title {
+    color: black;
     font-size: 18px;
     margin-top: 15px;
     font-weight: bold;
@@ -22,7 +19,9 @@ p {
     width: 30%;
     margin: 50px auto;
     height: 450px;
-    border: 1px solid white;
+    border: 15px solid #820808;
+    border-radius: 10px;
+
 }
 
 .calculator-display {
@@ -30,22 +29,25 @@ p {
     width: 100%;
     height: 25%;
     margin: 0 auto;
+    background-color: black;
 }
 
 #operations {
     text-align: right;
-    padding-top: 10px;
-    font-size: 1.5em;
+    padding-top: 15px;
+    font-size: 1.2em;
     padding-right: 10px;
     height: 24px;
+    color: white;
 }
 
 #result {
     text-align: right;
-    padding-top: 45px;
-    font-size: 1.5em;
+    padding-top: 35px;
+    font-size: 1.7em;
     padding-right: 10px;
     height: 24px;
+    color: white;
 }
 
 .calculator-buttons {
